fix(core/dropdown): show scrollbar (#129)

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -185,8 +185,3 @@
   @include breadcrumb('btn');
   @include breadcrumb('ghost');
 }
-
-.dropdown-overflow .dropdown-menu {
-  max-height: 25rem;
-  overflow-y: auto;
-}
